// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pagination PageSelector 1`] = `null`;

exports[`Pagination PageSelector 2`] = `
<div
  className="dropdown btn-group"
>
  <button
    aria-expanded={false}
    aria-haspopup={true}
    className="dropdown-toggle btn btn-default"
    disabled={false}
    id="current-page-drop-model"
    onClick={[Function]}
    onKeyDown={[Function]}
    onMouseOut={[Function]}
    onMouseOver={[Function]}
    role="button"
    type="button"
  >
    1
     
    <span
      className="caret"
    />
  </button>
  <ul
    aria-labelledby="current-page-drop-model"
    className="dropdown-menu dropdown-menu-right"
    role="menu"
  >
    <li
      className="dropdown-header"
      onKeyDown={[Function]}
      role="heading"
    >
      Jump To
    </li>
    <li
      className="disabled"
      role="presentation"
    >
      <a
        href="#"
        onClick={[Function]}
        onKeyDown={[Function]}
        role="menuitem"
        tabIndex="-1"
      >
        First Page
      </a>
    </li>
    <li
      className=""
      role="presentation"
    >
      <a
        href="#"
        onClick={[Function]}
        onKeyDown={[Function]}
        role="menuitem"
        tabIndex="-1"
      >
        Last Page
      </a>
    </li>
    <li
      className="dropdown-header"
      onKeyDown={[Function]}
      role="heading"
    >
      34
       Total Pages
    </li>
  </ul>
</div>
`;

exports[`Pagination PageSelector 3`] = `null`;

exports[`Pagination PageSelector 4`] = `
<div
  className="dropdown btn-group"
>
  <button
    aria-expanded={false}
    aria-haspopup={true}
    className="dropdown-toggle btn btn-default"
    disabled={false}
    id="current-page-drop-model"
    onClick={[Function]}
    onKeyDown={[Function]}
    onMouseOut={[Function]}
    onMouseOver={[Function]}
    role="button"
    type="button"
  >
    1
     
    <span
      className="caret"
    />
  </button>
  <ul
    aria-labelledby="current-page-drop-model"
    className="dropdown-menu dropdown-menu-right"
    role="menu"
  >
    <li
      className="dropdown-header"
      onKeyDown={[Function]}
      role="heading"
    >
      Jump To
    </li>
    <li
      className="disabled"
      role="presentation"
    >
      <a
        href="#"
        onClick={[Function]}
        onKeyDown={[Function]}
        role="menuitem"
        tabIndex="-1"
      >
        First Page
      </a>
    </li>
    <li
      className="disabled"
      role="presentation"
    >
      <a
        href="#"
        onClick={[Function]}
        onKeyDown={[Function]}
        role="menuitem"
        tabIndex="-1"
      >
        Last Page
      </a>
    </li>
    <li
      className="dropdown-header"
      onKeyDown={[Function]}
      role="heading"
    >
      ...
       Total Pages
    </li>
  </ul>
</div>
`;

exports[`Pagination PaginationButtons 1`] = `null`;

exports[`Pagination PaginationButtons 2`] = `
<div
  className="pagination-button-group btn-group"
>
  <button
    className="disabled-button-with-tooltip btn btn-default"
    disabled={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseOut={[Function]}
    onMouseOver={[Function]}
    type="button"
  >
    <i
      className="fa fa-chevron-left"
    />
  </button>
  <div
    className="dropdown btn-group"
  >
    <button
      aria-expanded={false}
      aria-haspopup={true}
      className="dropdown-toggle btn btn-default"
      disabled={false}
      id="current-page-drop-model"
      onClick={[Function]}
      onKeyDown={[Function]}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
      role="button"
      type="button"
    >
      1
       
      <span
        className="caret"
      />
    </button>
    <ul
      aria-labelledby="current-page-drop-model"
      className="dropdown-menu dropdown-menu-right"
      role="menu"
    >
      <li
        className="dropdown-header"
        onKeyDown={[Function]}
        role="heading"
      >
        Jump To
      </li>
      <li
        className="disabled"
        role="presentation"
      >
        <a
          href="#"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="menuitem"
          tabIndex="-1"
        >
          First Page
        </a>
      </li>
      <li
        className=""
        role="presentation"
      >
        <a
          href="#"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="menuitem"
          tabIndex="-1"
        >
          Last Page
        </a>
      </li>
      <li
        className="dropdown-header"
        onKeyDown={[Function]}
        role="heading"
      >
        34
         Total Pages
      </li>
    </ul>
  </div>
  <button
    className="btn btn-default"
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseOut={[Function]}
    onMouseOver={[Function]}
    type="button"
  >
    <i
      className="fa fa-chevron-right"
    />
  </button>
</div>
`;

exports[`Pagination PaginationButtons 3`] = `null`;

exports[`Pagination PaginationButtons 4`] = `
<div
  className="pagination-button-group btn-group"
>
  <button
    className="disabled-button-with-tooltip btn btn-default"
    disabled={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseOut={[Function]}
    onMouseOver={[Function]}
    type="button"
  >
    <i
      className="fa fa-chevron-left"
    />
  </button>
  <div
    className="dropdown btn-group"
  >
    <button
      aria-expanded={false}
      aria-haspopup={true}
      className="dropdown-toggle btn btn-default"
      disabled={false}
      id="current-page-drop-model"
      onClick={[Function]}
      onKeyDown={[Function]}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
      role="button"
      type="button"
    >
      1
       
      <span
        className="caret"
      />
    </button>
    <ul
      aria-labelledby="current-page-drop-model"
      className="dropdown-menu dropdown-menu-right"
      role="menu"
    >
      <li
        className="dropdown-header"
        onKeyDown={[Function]}
        role="heading"
      >
        Jump To
      </li>
      <li
        className="disabled"
        role="presentation"
      >
        <a
          href="#"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="menuitem"
          tabIndex="-1"
        >
          First Page
        </a>
      </li>
      <li
        className="disabled"
        role="presentation"
      >
        <a
          href="#"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="menuitem"
          tabIndex="-1"
        >
          Last Page
        </a>
      </li>
      <li
        className="dropdown-header"
        onKeyDown={[Function]}
        role="heading"
      >
        ...
         Total Pages
      </li>
    </ul>
  </div>
  <button
    className="disabled-button-with-tooltip btn btn-default"
    disabled={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseOut={[Function]}
    onMouseOver={[Function]}
    type="button"
  >
    <i
      className="fa fa-chevron-right"
    />
  </button>
</div>
`;

exports[`Pagination PaginationInfo 1`] = `
<div
  className="pagination-info"
>
  
</div>
`;

exports[`Pagination PaginationInfo 2`] = `
<div
  className="pagination-info"
>
  1 - 20 of 661
</div>
`;

exports[`Pagination PaginationInfo 3`] = `
<div
  className="pagination-info"
>
  1 - 40 of 661
</div>
`;

exports[`Pagination PaginationInfo 4`] = `
<div
  className="pagination-info"
>
  41 - 80 of 661
</div>
`;

exports[`Pagination PaginationInfo 5`] = `
<div
  className="pagination-info"
>
  1 - 4
</div>
`;
